associate fdc food with ingredient, food search component
